# cremniy

./: .gitattributes  .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  CONTRIBUTING_ru.md  README.md  README_ru.md  ROADMAP.md  ROADMAP_ru.md  cremniy.desktop
src/: CMakeLists.txt  main.cpp
src/Modules/References/AsciiChars/: asciicharsref.cpp  asciicharsref.h
src/Modules/Tabs/Binary/: binarytab.cpp  binarytab.h
src/Modules/Tabs/CodeEditor/: codeeditortab.cpp  codeeditortab.h
src/Modules/Tabs/Disassembler/: disassemblertab.cpp  disassemblertab.h
src/Modules/Windows/DataConverter/: dataconverterdialog.cpp  dataconverterdialog.h
src/Modules/Windows/ReverseCalculator/: reversecalculatordialog.cpp  reversecalculatordialog.h
src/Modules/Windows/ShellCodeGenerator/: shellcodegeneratordialog.cpp  shellcodegeneratordialog.h
src/ToolTabs/Binary/: CMakeLists.txt  binarytab.cpp  binarytab.h  formatpage.cpp  formatpage.h  formatpagefactory.cpp
src/ToolTabs/Binary/FormatPages/ELF/: CMakeLists.txt  elfpage.cpp  elfpage.h
src/ToolTabs/Binary/FormatPages/MBR/: mbrpage.cpp  mbrpage.h
src/ToolTabs/Binary/FormatPages/PE/: CMakeLists.txt  pepage.h
src/ToolTabs/Binary/FormatPages/RAW/: CMakeLists.txt  rawpage.cpp  rawpage.h
src/ToolTabs/Binary/QHexView/: CMakeLists.txt  QHexView.pri
src/ToolTabs/Binary/QHexView/src/: qhexview.cpp
src/ToolTabs/CodeEditor/: CMakeLists.txt  codeeditortab.cpp  codeeditortab.h
src/ToolTabs/CodeEditor/QCodeEditor/: CMakeLists.txt
src/ToolTabs/CodeEditor/QCodeEditor/include/: QCodeEditor.hpp
src/ToolTabs/CodeEditor/QCodeEditor/src/: QCECompleter.cpp  QCodeEditor.cpp  QLanguage.cpp  QLineNumberArea.cpp  QSyntaxStyle.cpp
src/ToolTabs/Disassembler/: CMakeLists.txt  disassemblertab.cpp  disassemblertab.h  disassemblerworker.cpp  disassemblerworker.h
src/ToolTabs/Disassembler/disasm/: disasmsyntaxdelegate.cpp  disasmsyntaxdelegate.h  disasmtexthighlighter.cpp
src/ToolTabs/Disassembler/disasm/backends/: radare2backend.cpp  radare2backend.h
src/Tools/References/: CMakeLists.txt
src/Tools/References/AsciiChars/: CMakeLists.txt  asciicharsref.cpp  asciicharsref.h
src/Tools/References/KeyboardScancodes/: CMakeLists.txt  keyboardscancodesref.cpp  keyboardscancodesref.h  keyboardscancodevizwidget.cpp  keyboardscancodevizwidget.h
src/Tools/Tabs/: CMakeLists.txt
src/Tools/Tabs/Binary/: CMakeLists.txt  binarytab.cpp  binarytab.h  formatpage.cpp  formatpage.h  formatpagefactory.cpp  formatpagefactory.h
src/Tools/Tabs/CodeEditor/: CMakeLists.txt  codeeditortab.cpp  codeeditortab.h
src/Tools/Tabs/Disassembler/: CMakeLists.txt  disassemblertab.cpp  disassemblertab.h  disassemblerworker.cpp  disassemblerworker.h  instructionhelpservice.cpp  instructionhelpservice.h
src/Tools/Tabs/Disassembler/disasm/: disasmtexthighlighter.h
src/Tools/Windows/: CMakeLists.txt
src/Tools/Windows/DataConverter/: CMakeLists.txt  dataconverterdialog.cpp  dataconverterdialog.h
src/Tools/Windows/ReverseCalculator/: CMakeLists.txt  reversecalculatordialog.h  reversecalculatorengine.h
src/Tools/Windows/ShellCodeGenerator/: CMakeLists.txt  shellcodegeneratordialog.cpp
src/app/IDEWindow/: idewindow.cpp  idewindow.h
src/app/WelcomeWindow/: welcomeform.cpp  welcomeform.h
src/components/codeeditor/: CMakeLists.txt
src/components/codeeditor/include/: QCodeEditor.hpp
src/components/codeeditor/resources/: codeeditor_res.qrc
src/components/codeeditor/resources/languages/: asm_att.xml  asm_intel.xml
src/components/codeeditor/resources/styles/: default_style.xml
src/components/codeeditor/src/: QCodeEditor.cpp
src/components/hexview/: CMakeLists.txt
src/components/hexview/include/QHexView/: qhexview.h
src/core/: FileDataBuffer.cpp  ToolTab.h  ToolTabFactory.cpp  ToolTabFactory.h
src/core/file/: FileDataBuffer.cpp  FileDataBuffer.h  filecontext.h  filemanager.cpp  filemanager.h
src/core/modules/: ModuleManager.cpp  ModuleManager.h  ReferenceBase.h  TabBase.h  WindowBase.h
src/core/project/: projectshistorymanager.cpp  projectshistorymanager.h
src/core/settings/: appsettings.cpp  appsettings.h  exclusionfilterproxymodel.cpp  exclusionfilterproxymodel.h
src/dialogs/: reversecalculatordialog.cpp  reversecalculatordialog.h  settingsdialog.cpp  settingsdialog.h  shellcodegeneratordialog.cpp  shellcodegeneratordialog.h
src/dialogs/reversecalculator/: reversecalculatordialog.cpp  reversecalculatorengine.cpp
src/include/: tooltab.cpp  tooltab.hpp
src/libs/CodeEditor/: .gitignore  CMakeLists.txt  README.md  README_ru.md
src/libs/CodeEditor/include/core/: LineCache.h  LineIndex.h  UTF8Decoder.h
src/libs/CodeEditor/include/widgets/: CustomCodeEditor.h  EditorEditOperations.h  EditorLanguageSupport.h  EditorTypingBehaviors.h  LineNumberArea.h
src/libs/CodeEditor/src/core/: LineCache.cpp  LineIndex.cpp  UTF8Decoder.cpp
src/libs/CodeEditor/src/widgets/: CustomCodeEditor.cpp  EditorEditOperations.cpp  EditorLanguageSupport.cpp  EditorTypingBehaviors.cpp  LineNumberArea.cpp
src/libs/HexEditor/: CMakeLists.txt  README.md
src/libs/HexEditor/include/QHexView/: qhexview.h  toolwidget.hpp
src/libs/HexEditor/src/: qhexview.cpp
src/libs/HexEditor/src/dialogs/: hexfinddialog.cpp
src/libs/HexEditor/src/model/: qhexcursor.cpp  qhexdocument.cpp  qhexmetadata.cpp  qhexutils.cpp
src/resources/: cremniy_res.qrc  icons.rar
src/resources/data/: instructions_ru.json
src/resources/styles/: style.qss
src/ui/: filestabwidget.cpp  filestabwidget.h  toolstabwidget.cpp
src/ui/FilesTabWidget/: filestabwidget.cpp  filestabwidget.h
src/ui/MenuBar/Menus/: CMakeLists.txt
src/ui/ToolsTabWidget/: ToolTab.h  ToolTabFactory.cpp  ToolTabFactory.h  toolstabwidget.cpp  toolstabwidget.h
src/utils/: globalwidgetsmanager.cpp  globalwidgetsmanager.h  iconprovider.cpp
src/widgets/: clickablelineedit.h  codeeditortab.cpp  filestabwidget.cpp  filestabwidget.h  filetab.cpp  filetab.h  filetreeview.cpp  filetreeview.h  hexviewtab.cpp  tooltabwidget.cpp  tooltabwidget.h
src/widgets/terminal/: terminalwidget.cpp  terminalwidget.h
(+67 files in other folders)
